--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   --light-blue: #61cdff;
   --dark-blue: #2d7eff;
   --faint-red: rgba(255, 0, 0, 0.5);
+  --replay-orange: #EB5757;
 }
 
 #viewer {
