--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -77,7 +77,7 @@
 }
 
 .toolbar-panel-button.active .toolbar-panel-icon {
-  background: var(--theme-toolbar-selected-color);
+  background: var(--primary-accent);
 }
 
 .timeline-tooltip {
