--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -201,9 +201,9 @@
 
 .replay-player .progress-line {
   width: 0%;
-  height: 5px;
+  height: 3px;
   border-radius: 4px;
-  background: var(--progressbar-line-color);
+  background: var(--primary-accent);
   position: absolute;
   pointer-events: none;
   margin-top: auto;
