--- a/src/ui/components/shared/Dropdown.css
+++ b/src/ui/components/shared/Dropdown.css
@@ -3,14 +3,14 @@
 }
 
 .dropdown-wrapper button.secondary {
-  color: var(--dark-blue);
-  border: 1px solid var(--dark-blue);
+  color: var(--primary-accent);
+  border: 1px solid var(--primary-accent);
   padding: 5px 10px 5px 5px;
   background: none;
 }
 
 .dropdown-wrapper button.secondary .img {
-  background: var(--dark-blue);
+  background: var(--primary-accent);
 }
 
 .dropdown-wrapper button .img:not(:last-child) {
