--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   --toolbox-background: #f9f9fa;
-  --paused-background-color: #5b41ff;
+  --paused-background-color: var(--secondary-accent);
 }
 
 #toolbox-timeline {
