--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -43,9 +43,9 @@
    *   and lighter variants for the dark theme (e.g. Red 20, Red 40).
    */
   
-  --primary-accent: #0A84FF;
-  --secondary-accent: #EB5757;
-  --secondary-accent-stroke: #9E0505;
+  --primary-accent: #1B7FE3;
+  --secondary-accent: #8330F4;
+  --secondary-accent-stroke: #F9F5FF;
    
   --magenta-50: #ff1ad9;
   --magenta-65: #dd00a9;
