--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   --progressbar-transition: 200ms;
   display: flex;
-  padding: 0px 20px;
+  padding: 0px 20px 0px 4px;
   align-items: center;
 }
 
@@ -26,7 +26,7 @@
   --hover-scrubber-line-background: var(--blue-50);
   --progress-recording-line: #d0021b;
   --progressbar-background: var(--grey-30);
-  --progressbar-line-color: var(--blue-40);
+  --progressbar-line-color: var(--primary-accent);
   --proggressbar-border-color: var(--theme-splitter-color);
   --tick-future-background: #bfc9d2;
   --tick-background: var(--blue-50);
@@ -140,7 +140,7 @@
 .replay-player .commands {
   display: flex;
   flex-direction: row;
-  margin: 11px 20px 11px 0px;
+  margin: 5px 8px 6px 2px;
 }
 
 .replay-player .commands > button {
@@ -154,8 +154,8 @@
 }
 
 .replay-player .commands > button .img {
-  width: 20px;
-  height: 20px;
+  width: 32px;
+  height: 32px;
 }
 
 .replay-player .commands > button:hover .img {
@@ -201,9 +201,9 @@
 
 .replay-player .progress-line {
   width: 0%;
-  height: 5px;
+  height: 3px;
   border-radius: 4px;
-  background: var(--progressbar-line-color);
+  background: var(--primary-accent);
   position: absolute;
   pointer-events: none;
   margin-top: auto;
