--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
@@ -97,7 +97,7 @@
 .breakpoint-navigation-timeline-pause-marker {
   position: absolute;
   height: 100%;
-  background: var(--replay-head-background);
+  background: var(--secondary-accent);
   width: 1px;
   z-index: var(--z-index-1--paused-message);
 }
