Subtle BG in the viewer so we don’t have a flat black.

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
   position: relative;
   overflow: hidden;
   flex-grow: 1;
-  background: #000;
+  background-image: url("/images/playbackBG.png");
 }
 
 #outer-viewer {
