don't show outline in the markup view

--- a/src/devtools/client/themes/markup.css
+++ b/src/devtools/client/themes/markup.css
@@ -456,3 +456,7 @@ ul.children + .tag-line::before {
   font-size: large;
   color: var(--theme-contrast-color);
 }
+
+#markup-root ul {
+  outline: none;
+}
