Reverting breakpoint line

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
@@ -93,3 +93,11 @@
 .breakpoint-navigation-timeline-point.pause .stroke {
   stroke: var(--replaying-paused-marker-stroke);
 }
+
+.breakpoint-navigation-timeline-pause-marker {
+   position: absolute;
+   height: 100%;
+   background: var(--secondary-accent);
+   width: 1px;
+   z-index: var(--z-index-1--paused-message);
+ }
