Disable pointer events on form placeholders

--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
@@ -140,6 +140,7 @@
   left: 8px;
   font-style: italic;
   color: var(--grey-40);
+  pointer-events: none;
 }
 
 .breakpoint-panel form .CodeMirror {
