Show timeline hover preview on playback for player mode

--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
@@ -2,6 +2,13 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
+.outlines-pane {
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 25px;
+}
+
 .outline {
   overflow-y: hidden;
 }
