--- a/src/devtools/client/debugger/src/components/shared/Accordion.css
+++ b/src/devtools/client/debugger/src/components/shared/Accordion.css
@@ -10,6 +10,7 @@
   margin-top: 0px;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .accordion ._header {
@@ -68,8 +69,13 @@
 .accordion ._content {
   border-bottom: 1px solid var(--theme-splitter-color);
   font-size: var(--theme-body-font-size);
+  overflow: auto;
 }
 
 .accordion div:last-child ._content {
   border-bottom: none;
+}
+
+.accordion.opened > * {
+  max-height: 50%;
 }
