part one of this fix, the accordions' contents in the explorer are now individually scrollable

--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
@@ -25,6 +25,12 @@
   height: 28px;
 }
 
+.outlines-pane {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 .outline-pane-info {
   padding: 0.5em;
   width: 100%;
