--- a/src/devtools/client/debugger/src/components/shared/Accordion.css
+++ b/src/devtools/client/debugger/src/components/shared/Accordion.css
@@ -10,6 +10,8 @@
   margin-top: 0px;
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
+  height: 100%;
 }
 
 .accordion ._header {
@@ -68,6 +70,8 @@
 .accordion ._content {
   border-bottom: 1px solid var(--theme-splitter-color);
   font-size: var(--theme-body-font-size);
+  overflow-y: auto;
+  height: 100%;
 }
 
 .accordion div:last-child ._content {
