no more large whitespace in explorer between accordions when theyre both collapsed

--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
@@ -26,9 +26,13 @@
 }
 
 .outlines-pane {
-  flex: 1;
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
+}
+
+.outlines-pane.expanded {
+  flex: 1;
 }
 
 .outline-pane-info {
