--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -19,6 +19,10 @@
   display: flex;
   flex-direction: column;
   overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.sources-pane.expanded {
   flex: 1;
 }
 
