trash icon is now only clickable when we have outputs to clear from the console, also removed some unused vars and inputs from the FilterBar file

--- a/src/devtools/client/themes/common.css
+++ b/src/devtools/client/themes/common.css
@@ -493,6 +493,18 @@ checkbox:-moz-focusring {
   right: 0;
 }
 
+.devtools-clear-icon {
+  cursor: pointer;
+}
+
+.devtools-clear-icon[disabled] {
+  cursor: auto;
+}
+
+.devtools-clear-icon[disabled]:hover {
+  cursor: auto;
+  background-color: transparent;
+}
 /* Text input */
 
 .devtools-textinput,
