--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -51,7 +51,8 @@
   background: white;
   bottom: 52px;
   border: 1px solid #ccc;
-  box-shadow: 0px 3px 4px #eaeaea;
+  box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px,
+  rgba(15, 15, 15, 0.2) 0px 9px 24px;
   border-radius: 3px;
   font-size: 1rem;
 }
