scrolling node into view when revealing in tree and its scrolled out of view (#1245)

--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
@@ -25,6 +25,16 @@
   height: 28px;
 }
 
+.outlines-pane {
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+}
+
+.outlines-pane.expanded {
+  flex: 1;
+}
+
 .outline-pane-info {
   padding: 0.5em;
   width: 100%;
