--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -17,9 +17,18 @@
 
 .sources-pane {
   display: flex;
-  flex: 1;
   flex-direction: column;
   overflow-x: auto;
+  overflow-y: hidden;
+}
+
+div.sources-pane {
+  height: 100%;
+}
+
+.sources-pane.expanded {
+  flex: 1;
+  height: 100%;
 }
 
 .sources-list .img.blackBox {
@@ -30,11 +39,14 @@
 .sources-list {
   flex: 1;
   display: flex;
+  height: 100%;
 }
 
 .sources-list .managed-tree {
   flex: 1;
   display: flex;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .sources-list .managed-tree .tree {
