url where recording originally happened can now be opened to a new tab on click (#1280)
* url where recording originally happened can now be opened to a new tab on click

* linting fix

* added link styling and reset titles back to what they were

Co-authored-by: karina <karina@replay.io>

--- a/src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
+++ b/src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
@@ -231,3 +231,8 @@
   background: var(--theme-body-color);
   margin: auto;
 }
+
+.page-url:hover {
+  color: var(--dark-blue) !important;
+  text-decoration: underline;
+}
