--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/BreakpointNavigation.css
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  background: #e4eaf5;
+  background: var(--theme-toolbar-background);
   position: relative;
   width: 100%;
   align-items: center;
@@ -100,4 +100,22 @@
   background: var(--secondary-accent);
   width: 1px;
   z-index: var(--z-index-1--paused-message);
+}
+
+.breakpoint-navigation-timeline .progress-line {
+  width: 0%;
+  height: 3px;
+  border-radius: 4px;
+  background: var(--primary-accent);
+  position: absolute;
+  pointer-events: none;
+  margin-top: auto;
+  margin-bottom: auto;
+  top: 0;
+  bottom: 0;
+}
+
+.breakpoint-navigation-timeline .progress-line.full {
+  width: 100%;
+  background: var(--grey-30);
 }
