displaying message now when there are no breakpoints to show in the breakpoint panel

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
@@ -6,6 +6,11 @@
   overflow-x: auto;
 }
 
+.no-breakpoints {
+  padding: 8px;
+  white-space: pre-wrap;
+}
+
 .breakpoints-list *:focus:not(:focus-visible) {
   outline: none;
   background: inherit;
