--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -44,6 +44,7 @@
    */
   
   --primary-accent: #1B7FE3;
+  --primary-accent-light: #86BFF9;
   --secondary-accent: #8330F4;
   --secondary-accent-stroke: #F9F5FF;
 
